--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เข้าสู่ระบบ</title>
+  <title>เข้าสู่ระบบด้วย Google</title>
   <link rel="stylesheet" href="style.css">
   <!-- นำเข้า Google Identity Services Library สำหรับ Google Sign-In -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
-    /* เพิ่ม CSS เพื่อจัดวางกล่องล็อกอินและปุ่ม Google Sign-In ให้อยู่ข้างกัน */
-    .login-container {
-      display: flex; /* ใช้ Flexbox เพื่อจัดวางองค์ประกอบข้างกัน */
-      justify-content: center; /* จัดให้อยู่ตรงกลางแนวนอน */
-      align-items: flex-start; /* จัดให้อยู่ด้านบนแนวตั้ง */
-      gap: 30px; /* ระยะห่างระหว่างกล่องล็อกอินและปุ่ม Google */
-      padding-top: 50px; /* เพิ่มระยะห่างจากด้านบน */
+    /* ปรับแต่ง CSS เพื่อจัดวางกล่อง Google Sign-In ให้อยู่ตรงกลาง */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh; /* ทำให้ body สูงเต็มหน้าจอ */
+      margin: 0;
+      padding: 20px; /* เพิ่ม padding เพื่อไม่ให้ชิดขอบจอเกินไป */
+      box-sizing: border-box; /* รวม padding ในขนาดของ element */
     }
 
     .google-signin-box {
@@ -24,17 +26,16 @@
       border-radius: 12px; /* มุมโค้งมน */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* เงา */
       text-align: center;
-      max-width: 300px; /* กำหนดความกว้างสูงสุด */
+      max-width: 350px; /* กำหนดความกว้างสูงสุด */
       width: 100%;
-      margin-top: 50px; /* จัดให้สูงเท่ากับกล่อง login-box */
+      color: #333; /* สีตัวอักษรสำหรับกล่อง Google Sign-In */
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      color: #333; /* สีตัวอักษรสำหรับกล่อง Google Sign-In */
     }
 
-    .google-signin-box h3 {
+    .google-signin-box h2 {
       margin-bottom: 20px;
       color: #333;
     }
@@ -45,44 +46,20 @@
   </style>
 </head>
 <body onload="checkLogin()"> <!-- เรียกใช้ checkLogin เมื่อโหลดหน้า -->
-  <div class="login-container">
-    <div class="login-box">
-      <h2>เข้าสู่ระบบ</h2>
-      <form onsubmit="return login(event)">
-        <div class="input-group">
-          <label for="username">ชื่อผู้ใช้ / อีเมล</label>
-          <input type="text" id="username" required>
-        </div>
-        <div class="input-group">
-          <label for="password">รหัสผ่าน</label>
-          <input type="password" id="password" required>
-        </div>
-        <button type="submit">เข้าสู่ระบบ</button>
-        <p id="message"></p> <!-- สำหรับแสดงข้อความสถานะการล็อกอิน -->
-        <p style="text-align:center;margin-top:10px;">
-          <a href="register.html">ยังไม่มีบัญชี? สมัครสมาชิก</a>
-        </p>
-        <p style="text-align:center;margin-top:10px;">
-          <a href="reset.html">ลืมรหัสผ่าน? คลิกที่นี่</a>
-        </p>
-      </form>
+  <div class="google-signin-box">
+    <h2>เข้าสู่ระบบ</h2>
+    <p>โปรดเข้าสู่ระบบด้วยบัญชี Google ของคุณ</p>
+    <div id="g_id_onload"
+         data-client_id="896330929514-ktrmgrol8v2he3dubl591j0cap13np5p.apps.googleusercontent.com"
+         data-callback="handleCredentialResponse"> <!-- data-client_id ของคุณ -->
     </div>
-
-    <!-- ส่วนสำหรับ Google Sign-In -->
-    <div class="google-signin-box">
-      <h3>หรือเข้าสู่ระบบด้วย</h3>
-      <div id="g_id_onload"
-           data-client_id="896330929514-ktrmgrol8v2he3dubl591j0cap13np5p.apps.googleusercontent.com"
-           data-callback="handleCredentialResponse"> <!-- data-client_id ของคุณ -->
-      </div>
-      <div class="g_id_signin"
-           data-type="standard"
-           data-size="large"
-           data-theme="outline"
-           data-text="sign_in_with"
-           data-shape="rectangular"
-           data-logo_alignment="left">
-      </div>
+    <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="signin_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
     </div>
   </div>
 
