--- a/admin.html
+++ b/admin.html
@@ -3,15 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ระบบหลังบ้าน</title>
+  <title>ไม่มีระบบหลังบ้าน</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="checkLogin(); loadUsers();"> <!-- เรียก checkLogin และ loadUsers เมื่อโหลดหน้า -->
+<body>
   <div class="login-box">
-    <h2>ระบบหลังบ้าน (Admin)</h2>
-    <div id="user-list"></div> <!-- สำหรับแสดงรายการผู้ใช้ -->
-    <button onclick="backToHome()">กลับหน้า Home</button>
+    <h2>ระบบหลังบ้าน</h2>
+    <p>ระบบหลังบ้านถูกปิดใช้งานแล้ว</p>
+    <p>คุณจะถูกนำไปยังหน้าเข้าสู่ระบบโดยอัตโนมัติ...</p>
+    <p style="text-align:center;margin-top:20px;">
+      <a href="index.html">คลิกที่นี่หากไม่ถูก Redirect</a>
+    </p>
   </div>
-  <script src="script.js"></script> <!-- นำเข้า JavaScript หลัก -->
+  <script>
+    // Redirect ไปหน้าเข้าสู่ระบบหลังจาก 3 วินาที
+    setTimeout(() => {
+      window.location.href = "index.html";
+    }, 3000);
+  </script>
 </body>
 </html>
