--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <title>สมัครสมาชิก</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="checkLogin()"> <!-- เรียกใช้ checkLogin เมื่อโหลดหน้า -->
+<body>
   <div class="login-box">
     <h2>สมัครสมาชิก</h2>
     <p>การสมัครสมาชิกทำได้ผ่านบัญชี Google เท่านั้น</p>
@@ -14,6 +14,6 @@
       <a href="index.html">กลับไปหน้าเข้าสู่ระบบ</a>
     </p>
   </div>
-  <script src="script.js"></script> <!-- นำเข้า JavaScript หลัก -->
+  <!-- ไม่ต้องมี script.js เพราะหน้านี้แค่แสดงข้อความและ Redirect -->
 </body>
 </html>
