Final UI adjustments: Center header title, back button logic, remove plus icon, swap data/summary tabs

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
     <!-- ส่วนเนื้อหาหลักของแอป -->
     <main class="app-content">
-      <!-- แถบเลือกแท็บด้านบน (ภาพรวม, รายการ, สรุป, ข้อมูล, เมนู) -->
+      <!-- แถบเลือกแท็บด้านบน (ภาพรวม, รายการ, ข้อมูล, สรุป, เมนู) -->
       <div class="tab-buttons">
         <button class="tab-button active" onclick="showTab('overview')">ภาพรวม</button>
         <button class="tab-button" onclick="showTab('items')">รายการ</button>
