--- a/home.html
+++ b/home.html
@@ -18,7 +18,8 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
       </button>
       <span class="header-title">ภาพรวม</span>
-      <!-- ปุ่ม + (เพิ่มรายการ) ถูกลบออกจาก Header แล้ว -->
+      <!-- เพิ่ม div เปล่าๆ นี้ เพื่อให้ header-title อยู่ตรงกลางอย่างแท้จริง -->
+      <div class="header-icon-placeholder"></div>
     </header>
 
     <!-- ส่วนเนื้อหาหลักของแอป -->
